--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <!-- Content descriptions-->
     <string name="sandwich_picture_content_description">Sandwich picture</string>
+    <string name="sandwich_name_content_description">Sandwich Name</string>
 
     <!-- Error messages-->
     <string name="detail_error_message">Sandwich data not available</string>
@@ -24,6 +25,19 @@
         <item>Roujiamo</item>
         <item>Shawarma</item>
         <item>Vada Pav</item>
+    </string-array>
+
+    <string-array name="sandwich_urls">
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Grilled_ham_and_cheese_014.JPG/800px-Grilled_ham_and_cheese_014.JPG</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/c/ca/Bosna_mit_2_Bratw%C3%BCrsten.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/4/48/Chivito1.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Club_sandwich.png/800px-Club_sandwich.png</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Steamed_Sandwich%2Ctaken_by_LeoAlmighty.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Sandwich_de_Medianoche.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Pljeskavica_%286883073017%29.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Roujiamo.jpg/800px-Roujiamo.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Shawarmafood.jpg/800px-Shawarmafood.jpg</item>
+        <item>https://upload.wikimedia.org/wikipedia/commons/1/15/Vada_Paav-The_Mumbai_Burger.jpg</item>
     </string-array>
 
     <string-array name="sandwich_details">
